# map-nl

./: .gitignore  .prettierignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yaml  index.html  main.py  main2.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
CONTRIBUTING/: index.html
data/: woz-pc4.csv
docs/: CONTRIBUTING.md  index.md  modules.md  usage.md
map_nl/: __init__.py  color.py  foo.py  geo_json_downloader.py  map.py
map_nl/geojson/: getter.py  simplifier.py
map_nl/map/: base.py  chloropleth.py  choropleth.py  map.py
map_nl/utils/: file_downloader.py  file_unizpper.py
modules/: index.html
notebooks/: Untitled.ipynb
scripts/: choropleth.py  map.py
search/: search_index.json
tests/: conftest.py  test_foo.py  utils.py
tests/data/: README.md  nl-pc4-map.geojson
tests/map_nl/geojson/: test_getter.py  test_simplifier.py
tests/map_nl/map/: test_choropleth.py  test_map.py
usage/: index.html
