[tool.poetry]
name = "map-nl"
version = "0.0.1"
description = "Quickly create maps of the Netherlands in Python"
authors = ["Florian Maas <ffpgmaas@gmail.com>"]
repository = "https://github.com/fpgmaas/map-nl"
documentation = "https://fpgmaas.github.io/map-nl/"
readme = "README.md"
packages = [
  {include = "map_nl"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
folium = "^0.15.0"
tqdm = "^4.66.1"
geopandas = "^0.14.1"
topojson = "^1.7"
pandas = "^2.1.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
jupyter = "^1.0.0"
jupyterlab = "^4.0.8"
matplotlib = "^3.8.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}


[tool.poetry.group.typing.dependencies]
pandas-stubs = "^2.1.1.230928"
types-requests = "^2.31.0.10"
types-tqdm = "^4.66.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["map_nl"]
disallow_untyped_defs = "True"
disallow_any_unimported = "False"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "False"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-blind-except
    "BLE",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PT",
    # isort
    "I",
    # mccabe
    "C90",
    # pep8-naming
    "N",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Use specific rule codes when ignoring type issues
    "PGH003"
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["map_nl"]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
